--- a/OnionConsumeWebAPI/Views/GDSTripsell/PostSeatMapModaldataView.cshtml
+++ b/OnionConsumeWebAPI/Views/GDSTripsell/PostSeatMapModaldataView.cshtml
@@ -290,7 +290,7 @@
                                                                 {
                                                                     <li class="seat-li free-seat tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l _@Model.passeengerlist.journeys[0].segments[0].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
@@ -298,7 +298,7 @@
                                                                 {
                                                                     <li class="seat-li lowcomfort tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l _@Model.passeengerlist.journeys[0].segments[0].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
@@ -306,7 +306,7 @@
                                                                 {
                                                                     <li class="seat-li midcomfort tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck" name="unitKey" value="@feeamountF1 _@data _OneWay0 _@l _@Model.passeengerlist.journeys[0].segments[0].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
@@ -423,7 +423,7 @@
                                                                 {
                                                                     <li class="seat-li free-seat tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l  _@Model.passeengerlist.journeys[0].segments[1].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
@@ -431,7 +431,7 @@
                                                                 {
                                                                     <li class="seat-li lowcomfort tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l  _@Model.passeengerlist.journeys[0].segments[1].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
@@ -439,7 +439,7 @@
                                                                 {
                                                                     <li class="seat-li midcomfort tooltip">
                                                                         <input type="hidden" id="passengerkey" name="passengerkey" value="@Model.passeengerlist.passengers[0].passengerKey" />
-                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l" id="unitKey" />
+                                                                        <input type="checkbox" class="mycheck2" name="unitKey" value="@feeamountF1 _@data _OneWay1 _@l  _@Model.passeengerlist.journeys[0].segments[1].externalIdentifier" id="unitKey" />
                                                                         <span class="tooltiptext">@data <span>&#8377; @feeamountF1</span></span>
                                                                     </li>
                                                                 }
